src/objects/SurveyAnswer__c.object
<CustomObject>
    <fields>
        <fullName>Coupon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coupon</label>
        <referenceTo>Coupon__c</referenceTo>
        <relationshipLabel>SurveyAnswers</relationshipLabel>
        <relationshipName>SurveyAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DNIUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User__c</referenceTo>
        <relationshipLabel>SurveyAnswers</relationshipLabel>
        <relationshipName>SurveyAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>SurveyAnswers</relationshipLabel>
        <relationshipName>SurveyAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SurveyAnswer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey__c</columns>
        <columns>DNIUser__c</columns>
        <columns>Coupon__c</columns>
        <columns>Date__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA{0000}</displayFormat>
        <label>SurveyAnswer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SurveyAnswers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>